# SeleniumPelican

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Linux_代收貨款匯款明細.sh  Linux_代收貨款查詢.sh  Linux_安裝.sh  Linux_更新.sh  Linux_運費未請款明細.sh  Linux_運費發票明細.sh  Linux_配置驗證.sh  README.md  Windows_代收貨款匯款明細.cmd  Windows_代收貨款查詢.cmd  Windows_安裝.cmd  Windows_更新.cmd  Windows_運費未請款明細.cmd  Windows_運費查詢.cmd  Windows_運費發票明細.cmd  Windows_配置驗證.cmd  accounts.json  accounts.json.example  pyproject.toml  pytest-performance.ini  requirements.txt  run.bat  run.cmd  run.sh  run_freight.cmd  run_freight.ps1  run_freight.sh  run_payment.cmd  run_payment.ps1  run_payment.sh  run_unpaid.cmd  run_unpaid.ps1  run_unpaid.sh  run_unpaid_freight.cmd  (+6 more)
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.claude/commands/BMad/agents/: qa.md
.claude/scripts/: context-monitor.py
.cursor/rules/bmad/: analyst.mdc  architect.mdc  bmad-master.mdc  bmad-orchestrator.mdc  dev.mdc  pm.mdc  po.mdc  qa.mdc  sm.mdc  ux-expert.mdc
.gemini/commands/BMad/agents/: analyst.toml  architect.toml  bmad-master.toml  bmad-orchestrator.toml  dev.toml  pm.toml  po.toml  qa.toml  sm.toml  ux-expert.toml
.gemini/commands/BMad/tasks/: advanced-elicitation.toml  apply-qa-fixes.toml  brownfield-create-epic.toml  brownfield-create-story.toml  correct-course.toml  create-brownfield-story.toml  create-deep-research-prompt.toml  create-doc.toml  create-next-story.toml  document-project.toml  execute-checklist.toml  facilitate-brainstorming-session.toml  generate-ai-frontend-prompt.toml  index-docs.toml  kb-mode-interaction.toml  nfr-assess.toml  qa-gate.toml  review-story.toml  risk-profile.toml  shard-doc.toml  test-design.toml  trace-requirements.toml  validate-next-story.toml
.github/workflows/: type-check.yml
.serena/: project.yml
.serena/memories/: architecture_patterns.md  code_style_conventions.md  cross_platform_compatibility.md  error_handling_analysis.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/: README.md  type-annotation-guide.md
docs/architecture/: components.md  design_patterns.md  improvement_suggestions.md  overview.md  technical_decisions.md
docs/development/: coding_standards.md  setup_guide.md
docs/technical/: README.md  api_reference.md  browser-utils-ubuntu-optimization.md  ubuntu-deployment-guide.md
scripts/: cleanup_type_artifacts.ps1  cleanup_type_artifacts.sh  common_checks.cmd  common_checks.ps1  common_checks.sh  convert_print_to_logger.py  install.ps1  install.sh  log_monitor.py  run_freight.ps1  run_payment.ps1  run_performance_tests.py  run_test_browser.sh  run_unpaid.ps1  test_browser.py  test_ubuntu_env.sh  type_check.ps1  type_check.sh  update.ps1  update.sh
src/: __init__.py
src/core/: __init__.py  base_scraper.py  browser_utils.py  config_validator.py  constants.py  diagnostic_manager.py  exceptions.py  improved_base_scraper.py  log_analyzer.py  logging_config.py  monitoring_service.py  multi_account_manager.py  smart_wait.py  type_aliases.py
src/scrapers/: __init__.py  freight_scraper.py  payment_scraper.py  payment_scraper.py.bak  unpaid_freight_scraper.py  unpaid_scraper.py
src/utils/: browser_tester.py  debug_captcha.py  discord_notifier.py  email_notifier.py  log_monitor.py  performance_runner.py  windows_encoding_utils.py
